Blackpurl/src/objects/BRP_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <description>Holds the BRP Dealer ID of the BP Dealer</description>
        <label>Dealer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_Measure__c</fullName>
        <description>Mile or Kilometer</description>
        <label>Radius Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <description>Radius for searching for parts</description>
        <label>Radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Holds the BRP endpoint</description>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>

    <label>BRP Settings</label>
</CustomObject>